stop brand slider on mobile

--- a/client/src/components/template/banner/style/slider.scss
+++ b/client/src/components/template/banner/style/slider.scss
@@ -90,6 +90,9 @@
 
 @media (min-width: 768px) {
   .slide {
+    &__img {
+      object-fit: cover;
+    }
     height: 500px;
   }
 }
